@@ -1,6 +1,6 @@
 ## Interface: 70200
 ## Author: Неогик@Галакронд
-## Version: 0.0.4
+## Version: 0.0.5
 ## Title: |cff69ccf0Guild Taxes|r
 ## Title-ruRU: |cff69ccf0Налоги гильдии|r
 ## Notes: Keep your guild bank full
@@ -17,4 +17,4 @@ localization.en.lua
 # Main module
 GuildTaxes.lua
 GuildTaxesConfig.lua
-#GuildTaxesGUI.lua
+GuildTaxesGUI.lua
