@@ -14,6 +14,11 @@ GT_CONFIG_VERBOSE_LOG_DESC   = "В чат будет печататься инф
 GT_CONFIG_DEBUG_LOG          = "Отладка"
 GT_CONFIG_DEBUG_LOG_DESC     = "Печать отладочной информации (для разработчиков)"
 
+GT_GUI_TITLE                 = "Налоги гильдии"
+GT_GUI_ALL_PAYED             = "Всё оплачено"
+GT_GUI_TAX                   = "Начислено %s"
+GT_GUI_GENERAL_INFO          = ", платим |cffffff00%i%%|r в гильдию |cffffff00%s|r"
+
 GT_CHAT_PREFIX               = "Налоги"
 GT_CHAT_GENERAL_INFO         = "Платим |cffffff00%i%%|r налогов в гильдию |cffffff00%s|r@|cffffff00%s|r"
 GT_CHAT_TAX                  = "Начислено налогов: %s"
@@ -23,4 +28,3 @@ GT_CHAT_TRANSACTION          = "Получено %s (налог %s)"
 GT_CHAT_NOTHING_TO_PAY       = "Платить ничего не нужно"
 GT_CHAT_OPEN_BANK            = "Пожалуйста, откройте банк гильдии"
 GT_CHAT_PAYING_TAX           = "Оплачиваю %s налога"
-
